# grue-hs

./: .dir-locals.el  CHANGELOG.md  README.md  fourmolu.yaml  grue-hs.cabal
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
app/: Console.hs  CursesUI.hs  Files.hs  Main.hs
src/Grue/: Dictionary.hs  Header.hs  Instruction.hs  Interp.hs  Memory.hs  Object.hs  Quetzal.hs  VM.hs  ZString.hs
test/: Main.hs
test/stories/: README.md  czech.z3  czech.z4
test/stories/precise/: arith.inf  arith.out  arith.z3  objects.inf  objects.out  objects.z3  parse.in  parse.inf  parse.out  parse.z3  random.inf  random.out  random.z3  readchar.inf  readchar.out  readchar.z4  scantable.inf  scantable.out  scantable.z4
tools/: build-tests.sh  compare.sh  gen-expected.sh
tools/walkthroughs/: advent.txt  cloak.txt  minizork.txt  zork1.txt
